Bugfix: 404 page over https
all links over https protocol

--- a/404.html
+++ b/404.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="M. Kaykanloo's Personal Website">
     <meta name="author" content="M. Kaykanloo">
-    <link rel="shortcut icon" href="http://www.kaykanloo.com/img/favicon.ico">
+    <link rel="shortcut icon" href="https://www.kaykanloo.com/img/favicon.ico">
     <title>M. Kaykanloo | Page not found</title>
 	<!-- Bootstrap -->
-	<link href="http://www.kaykanloo.com/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://www.kaykanloo.com/css/bootstrap.min.css" rel="stylesheet">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
-	<link href="http://www.kaykanloo.com/css/styles.css?v=1.2" rel="stylesheet">	
+	<link href="https://www.kaykanloo.com/css/styles.css?v=1.2" rel="stylesheet">	
 </head>
 <body>
 	<header>
@@ -34,11 +34,11 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="http://www.kaykanloo.com/">About Me</a></li>
-			<li><a href="http://www.kaykanloo.com/resume/">My Resume</a></li>
-			<li><a href="http://www.kaykanloo.com/projects/" >My Projects</a></li>
-			<li><a href="http://www.kaykanloo.com/knowledge/">Knowledge Base</a></li>
-			<li><a href="http://www.kaykanloo.com/contact/">Contact</a></li>
+            <li><a href="https://www.kaykanloo.com/">About Me</a></li>
+			<li><a href="https://www.kaykanloo.com/resume/">My Resume</a></li>
+			<li><a href="https://www.kaykanloo.com/projects/" >My Projects</a></li>
+			<li><a href="https://www.kaykanloo.com/knowledge/">Knowledge Base</a></li>
+			<li><a href="https://www.kaykanloo.com/contact/">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -50,7 +50,7 @@
 			<h1>Page not found!</h1>
 		</div>
 		<div class="ContentTextCenter">
-			<p>The address that you've entered does not exists. Please check it again or visit the <a href="http://www.kaykanloo.com/">Home Page</a></p> 
+			<p>The address that you've entered does not exists. Please check it again or visit the <a href="https://www.kaykanloo.com/">Home Page</a></p> 
 		</div>
 	</div>
    
@@ -60,35 +60,35 @@
 				<div class="BigScreen">
 					<div class="col-xs-3 footer-leftcol">
 						<p>Hosted on <a href="https://pages.github.com/">GitHub Pages</a></p>
-						<p>&#169;2014 <a href="http://www.kaykanloo.com">Kaykanloo</a></p>
+						<p>&#169;2014 <a href="https://www.kaykanloo.com">Kaykanloo</a></p>
 					</div>
 					<div class="col-xs-6 footer-midcol">
-						<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
-						<p>Content is available under <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a> unless otherwise noted.</p>
+						<p><a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
+						<p>Content is available under <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a> unless otherwise noted.</p>
 						<div class="clearfix"></div>
 					</div>
 					<div class="col-xs-3 footer-rightcol">
 						<p>Designed by </p>
-						<p><a href="http://www.kaykanloo.com/">M. Kaykanloo</a></p>
+						<p><a href="https://www.kaykanloo.com/">M. Kaykanloo</a></p>
 					</div>
 				</div>
 				<div class="SmallScreen">
 					<div class="col-xs-4 footer-leftcol">
-						<p>&#169;2014 <br> <a href="http://www.kaykanloo.com">Kaykanloo</a></p>
+						<p>&#169;2014 <br> <a href="https://www.kaykanloo.com">Kaykanloo</a></p>
 					</div>
 					<div class="col-xs-4 footer-midcol">
-						<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
+						<p><a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
 						<p><a rel="license" href="terms/">Terms of use</a></p>
 					</div>
 					<div class="col-xs-4 footer-rightcol">
 						<p>DesignedBy</p>
-						<p><a href="http://www.kaykanloo.com/">M.Kaykanloo</a></p>
+						<p><a href="https://www.kaykanloo.com/">M.Kaykanloo</a></p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
-	<script src="http://www.kaykanloo.com/js/jquery.min.js"></script>
-	<script src="http://www.kaykanloo.com/js/bootstrap.min.js"></script>
-	<script src="http://www.kaykanloo.com/js/googleanalytics.js"></script>
+	<script src="https://www.kaykanloo.com/js/jquery.min.js"></script>
+	<script src="https://www.kaykanloo.com/js/bootstrap.min.js"></script>
+	<script src="https://www.kaykanloo.com/js/googleanalytics.js"></script>
 </body>
