Bugfix: KB pages over https
all links over https protocol

--- a/knowledge/samplecontent/index.html
+++ b/knowledge/samplecontent/index.html
@@ -84,11 +84,11 @@ __Ordered List__:
 
 __Links__:
 
-Inline links [like this](http://www.example.com "optional title") can be written.
+Inline links [like this](https://www.example.com "optional title") can be written.
 There is also two types of reference-like links, like [this][id] and [this][].
 
-[id]: http://www.example.com "optional title"
-[this]: http://www.example.com "optional title"  
+[id]: https://www.example.com "optional title"
+[this]: https://www.example.com "optional title"  
 
 # Section 2 
 This section has multiple subsections:
@@ -139,29 +139,29 @@ And __pictures__:
 				<div class="BigScreen">
 					<div class="col-xs-3 footer-leftcol">
 						<p>Hosted on <a href="https://pages.github.com/">GitHub Pages</a></p>
-						<p>&#169;2014 <a href="http://www.kaykanloo.com">Kaykanloo</a></p>
+						<p>&#169;2014 <a href="https://www.kaykanloo.com">Kaykanloo</a></p>
 					</div>
 					<div class="col-xs-6 footer-midcol">
-						<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
-						<p>Content is available under <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a> unless otherwise noted.</p>
+						<p><a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
+						<p>Content is available under <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a> unless otherwise noted.</p>
 						<div class="clearfix"></div>
 					</div>
 					<div class="col-xs-3 footer-rightcol">
 						<p>Designed by </p>
-						<p><a href="http://www.kaykanloo.com/">M. Kaykanloo</a></p>
+						<p><a href="https://www.kaykanloo.com/">M. Kaykanloo</a></p>
 					</div>
 				</div>
 				<div class="SmallScreen">
 					<div class="col-xs-4 footer-leftcol">
-						<p>&#169;2014 <br> <a href="http://www.kaykanloo.com">Kaykanloo</a></p>
+						<p>&#169;2014 <br> <a href="https://www.kaykanloo.com">Kaykanloo</a></p>
 					</div>
 					<div class="col-xs-4 footer-midcol">
-						<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
+						<p><a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
 						<p><a rel="license" href="../../terms/">Terms of use</a></p>
 					</div>
 					<div class="col-xs-4 footer-rightcol">
 						<p>DesignedBy</p>
-						<p><a href="http://www.kaykanloo.com/">M.Kaykanloo</a></p>
+						<p><a href="https://www.kaykanloo.com/">M.Kaykanloo</a></p>
 					</div>
 				</div>
 			</div>
@@ -176,6 +176,6 @@ And __pictures__:
 	<script src="../../js/toc.js"></script>
 	<script src="../../js/highlight.pack.js"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
-	<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+	<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 	<script src="../../js/googleanalytics.js"></script>
 </body>
