Sandbox: correcting remoteapi path

--- a/sandbox/remoteapi.html
+++ b/sandbox/remoteapi.html
@@ -10,7 +10,7 @@
         document.getElementById("msg").innerHTML=xmlhttp.responseText;
       }
     }
-    xmlhttp.open("GET","/helloapi",true);
+    xmlhttp.open("GET","http://intense-temple.herokuapp.com/helloapi",true);
     xmlhttp.send();
   </script>
 </head>
