Adding title and description

--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,8 @@
 
 <head>
 	<meta charset="utf-8" />
+	<title>Kaykanloo</title>
+	<meta name="description" content="Kaykanloo's personal webpage.">
 	<link rel="icon" sizes="32x32" type="image/png" href="%sveltekit.assets%/favicon-32x32.png" />
 	<link rel="icon" sizes="192x192" type="image/png" href="%sveltekit.assets%/favicon-192x192.png" />
 	<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
